--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <main>
              <section class="location">
                  <div class="city">Birmingham, gb</div>
-                 <div class="date">Monday 26yth April</div>
+                 <div class="date">Monday 26th April</div>
              </section>
              <div class="current">
                  <div class="temp">15<span>°c</span></div>
