--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
   <title>Weather</title>
  </head>
  <body>
-     <div class="app-wrap">
-         <header>
-             <input type="text" autocomplete="off" class="search-box" placeholder="search for City">
-         </header>
-         <main>
-             <section class="location">
-                 <div class="city">Birmingham, gb</div>
-                 <div class="date">Monday 26th April</div>
-             </section>
-             <div class="current">
-                 <div class="temp">15<span>°c</span></div>
-                 <div class="weatber">Sunny</div>
-                 <div class="hi-low">13°c/16°c</div>
-             </div>
-         </main>
-     </div>
- 
+  <div class="app-wrap">
+   <header>
+    <input
+     type="text"
+     autocomplete="off"
+     class="search-box"
+     placeholder="search for City"
+    />
+   </header>
+   <main>
+    <section class="location">
+     <div class="city">Please put in your location</div>
+     <div class="date">Monday 26th April</div>
+    </section>
+    <div class="current">
+     <div class="temp">15<span>°c</span></div>
+     <div class="weather">Sunny</div>
+     <div class="hi-low">13/16</div>
+    </div>
+   </main>
+  </div>
+
   <script src="app.js"></script>
  </body>
 </html>
