--- a/index.html
+++ b/index.html
@@ -1,4 +1,59 @@
 <!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weather App</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+<link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css" />
+  <script src="./app.js" defer></script>
+ </head>
+<!-- <header> <div class="header">   <h1>Weather Express</h1></div></header> -->
+ <body>
+  <div class="card">
+   <div class="search">
+    <input type="text" class="search-bar" placeholder="Search" id="search" />
+    <button>
+     <svg
+      stroke="currentColor"
+      fill="currentColor"
+      stroke-width="0"
+      viewBox="0 0 1024 1024"
+      height="1.5em"
+      width="1.5em"
+      xmlns="http://www.w3.org/2000/svg"
+     >
+      <path
+       d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
+      ></path>
+     </svg>
+    </button>
+    <!-- <button onclick="document.getElementById('search').value = ''">
+        <img src="./icons//icon.png" alt="icon" class="icon" color="white">
+    </button>
+</img> -->
+    </div>
+
+   
+   <div class="weather loading">
+    <h2 class="city"></h2>
+    <h1 class="temp"></h1>
+    <div class="flex">
+     <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
+     <div class="description"></div>
+    </div>
+    <div class="hi-low"></div>
+    <div class="humidity"></div>
+    <div class="wind"></div>
+   </div>
+  </div>
+</div>
+ </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html>
  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,17 +74,20 @@
    </header>
    <main>
     <section class="location">
-     <div class="city">Please put in your location</div>
-     <div class="date">Monday 26th April</div>
+     <div class="city">For your local weather report</div>
+     <div class="date">Please input in your location</div>
     </section>
     <div class="current">
-     <div class="temp">15<span>°c</span></div>
-     <div class="weather">Sunny</div>
-     <div class="hi-low">13/16</div>
+     <div class="temp"><span></span></div>
+     <div class="weather"></div>
+     <div class ="icon"></div>
+     <div class="hi-low"></div>
     </div>
+    <div class="sun-rise"></div>
+    <div class="id"></div>
    </main>
   </div>
 
   <script src="app.js"></script>
  </body>
-</html>
+</html> -->
