--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="./style.css" />
   <script src="./app.js" defer></script>
  </head>
-<!-- <header> <div class="header">   <h1>Weather Express</h1></div></header> -->
+<header> <div class="header">   <h1>Weather Express</h1></div></header>
+<p>Search the weather near you</p>
  <body>
   <div class="card">
    <div class="search">
@@ -30,13 +31,11 @@
       ></path>
      </svg>
     </button>
-    <!-- <button onclick="document.getElementById('search').value = ''">
+    <button onclick="document.getElementById('search').value = ''">
         <img src="./icons//icon.png" alt="icon" class="icon" color="white">
     </button>
-</img> -->
+</img>
     </div>
-
-   
    <div class="weather loading">
     <h2 class="city"></h2>
     <h1 class="temp"></h1>
@@ -52,42 +51,3 @@
 </div>
  </body>
 </html>
-
-<!-- <!DOCTYPE html>
-<html>
- <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="style.css" />
-  <meta charset="utf-8" />
-  <title>Weather</title>
- </head>
- <body>
-  <div class="app-wrap">
-   <header>
-    <input
-     type="text"
-     autocomplete="off"
-     class="search-box"
-     placeholder="search for City"
-    />
-   </header>
-   <main>
-    <section class="location">
-     <div class="city">For your local weather report</div>
-     <div class="date">Please input in your location</div>
-    </section>
-    <div class="current">
-     <div class="temp"><span></span></div>
-     <div class="weather"></div>
-     <div class ="icon"></div>
-     <div class="hi-low"></div>
-    </div>
-    <div class="sun-rise"></div>
-    <div class="id"></div>
-   </main>
-  </div>
-
-  <script src="app.js"></script>
- </body>
-</html> -->
